[package]
name = "bell"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = "1.0.228"
time = { version = "0.3.44", features = ["serde", "serde-human-readable", "local-offset"] }

[build-dependencies]
nom = "8.0.0"
serde_json = "1.0.149"
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
time = { version = "0.3.44", features = ["serde", "serde-human-readable", "parsing","macros"] }
